[gd_scene load_steps=13 format=3 uid="uid://6xjxss6atj0t"]

[ext_resource type="Script" path="res://scenes/wall/Wall.gd" id="1_ww28q"]
[ext_resource type="Texture2D" uid="uid://bl5x3nkiy3nhs" path="res://sprites/wall/wall-left.png" id="2_g3xw1"]
[ext_resource type="Texture2D" uid="uid://bq1qvcoactmjj" path="res://sprites/wall/wall-top.png" id="3_q0tnp"]
[ext_resource type="Texture2D" uid="uid://mncoa56v3laj" path="res://sprites/wall/wall-top-left.png" id="4_w7pjq"]
[ext_resource type="Texture2D" uid="uid://dka6lg6nlbeqx" path="res://sprites/wall/wall-top-right.png" id="5_vmovo"]
[ext_resource type="AudioStream" uid="uid://caqy58vg2krh4" path="res://audio/wall_hit.wav" id="6_hkrif"]
[ext_resource type="Texture2D" uid="uid://dte0s5rmv3ini" path="res://sprites/wall/bottom-wall.png" id="7_saapr"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0pp1h"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_nc703"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_k0tck"]
normal = Vector2(0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_beoa6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3e3v1"]
size = Vector2(700, 5)

[node name="Wall" type="Node2D"]
script = ExtResource("1_ww28q")

[node name="WallObject" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 11

[node name="CollisionLeft" type="CollisionShape2D" parent="WallObject"]
position = Vector2(22, 360)
shape = SubResource("WorldBoundaryShape2D_0pp1h")

[node name="CollisionRight" type="CollisionShape2D" parent="WallObject"]
position = Vector2(726, 360)
shape = SubResource("WorldBoundaryShape2D_nc703")
debug_color = Color(0, 0.6, 0.701961, 0.47451)

[node name="CollisionTop" type="CollisionShape2D" parent="WallObject"]
position = Vector2(374, 16)
shape = SubResource("WorldBoundaryShape2D_k0tck")

[node name="Left" type="Sprite2D" parent="WallObject"]
texture_repeat = 2
position = Vector2(14, 365)
texture = ExtResource("2_g3xw1")
region_enabled = true
region_rect = Rect2(0, 0, 16, 720)

[node name="Right" type="Sprite2D" parent="WallObject"]
texture_repeat = 2
position = Vector2(734, 365)
texture = ExtResource("2_g3xw1")
region_enabled = true
region_rect = Rect2(0, 0, 16, 720)

[node name="TopGroup" type="CanvasGroup" parent="WallObject"]
unique_name_in_owner = true

[node name="Bg" type="Sprite2D" parent="WallObject/TopGroup"]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(374, -367)
texture = SubResource("CanvasTexture_beoa6")
region_enabled = true
region_rect = Rect2(0, 0, 740, 740)

[node name="Top" type="Sprite2D" parent="WallObject/TopGroup"]
texture_repeat = 2
position = Vector2(374, 8)
texture = ExtResource("3_q0tnp")
region_enabled = true
region_rect = Rect2(0, 0, 704, 16)

[node name="LeftCorner" type="Sprite2D" parent="WallObject/TopGroup"]
position = Vector2(15, 9)
texture = ExtResource("4_w7pjq")

[node name="RightCorner" type="Sprite2D" parent="WallObject/TopGroup"]
position = Vector2(733, 8)
texture = ExtResource("5_vmovo")

[node name="WallArea2D" type="Area2D" parent="WallObject"]
collision_layer = 4
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WallObject/WallArea2D"]
visible = false
polygon = PackedVector2Array(22, 720, 22, 16, 726, 16, 726, 720, 742, 720, 742, 0, 0, 0, 0, 720)
disabled = true

[node name="CollisionLeft2" type="CollisionShape2D" parent="WallObject/WallArea2D"]
position = Vector2(22, 360)
shape = SubResource("WorldBoundaryShape2D_0pp1h")

[node name="CollisionRight2" type="CollisionShape2D" parent="WallObject/WallArea2D"]
position = Vector2(726, 360)
shape = SubResource("WorldBoundaryShape2D_nc703")
debug_color = Color(0, 0.6, 0.701961, 0.47451)

[node name="CollisionTop2" type="CollisionShape2D" parent="WallObject/WallArea2D"]
position = Vector2(374, 16)
shape = SubResource("WorldBoundaryShape2D_k0tck")

[node name="AudioWall" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_hkrif")

[node name="Bottom" type="StaticBody2D" parent="."]
position = Vector2(374, 715)
collision_layer = 4
collision_mask = 10

[node name="Sprite2D" type="Sprite2D" parent="Bottom"]
texture_repeat = 2
texture = ExtResource("7_saapr")
region_enabled = true
region_rect = Rect2(0, 0, 690, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
shape = SubResource("RectangleShape2D_3e3v1")

[node name="Timer" type="Timer" parent="Bottom"]
wait_time = 15.0
one_shot = true

[node name="Area2D" type="Area2D" parent="Bottom"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Bottom/Area2D"]
shape = SubResource("RectangleShape2D_3e3v1")

[connection signal="body_shape_entered" from="WallObject/WallArea2D" to="." method="_on_wall_area_body_shape_entered"]
[connection signal="timeout" from="Bottom/Timer" to="." method="_on_bottom_timer_timeout"]
[connection signal="body_shape_entered" from="Bottom/Area2D" to="." method="_on_wall_area_body_shape_entered"]
